@@ -117,6 +117,7 @@ public class UserDao extends AbstractDao<User> {
             user.setLocale(rs.getString(++i));
             user.setTokenVersion(rs.getInt(++i));
             user.setPasswordVersion(rs.getInt(++i));
+            user.setPasswordChangeTimestamp(rs.getLong(++i));
             return user;
         }
     }
@@ -142,8 +143,8 @@ public class UserDao extends AbstractDao<User> {
     }
 
     private static final String USER_INSERT = "INSERT INTO users (username, password, email, phone, " //
-            + "disabled, homeUrl, receiveAlarmEmails, receiveOwnAuditEvents, timezone, muted, permissions, name, locale, tokenVersion, passwordVersion) " //
-            + "VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)";
+            + "disabled, homeUrl, receiveAlarmEmails, receiveOwnAuditEvents, timezone, muted, permissions, name, locale, tokenVersion, passwordVersion, passwordChangeTimestamp) " //
+            + "VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)";
 
     void insertUser(User user) {
         int id = getTransactionTemplate().execute(new TransactionCallback<Integer>() {
@@ -155,11 +156,11 @@ public class UserDao extends AbstractDao<User> {
                                 boolToChar(user.isDisabled()), user.getHomeUrl(),
                                 user.getReceiveAlarmEmails(), boolToChar(user.isReceiveOwnAuditEvents()), user.getTimezone(),
                                 boolToChar(user.isMuted()), user.getPermissions(), user.getName(), user.getLocale(), user.getTokenVersion(),
-                                user.getPasswordVersion()},
+                                user.getPasswordVersion(), Common.timer.currentTimeMillis()},
                         new int[] { Types.VARCHAR, Types.VARCHAR,
                                 Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.INTEGER,
                                 Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR,
-                                Types.VARCHAR, Types.INTEGER, Types.INTEGER }
+                                Types.VARCHAR, Types.INTEGER, Types.INTEGER, Types.BIGINT}
                         );
             }
         });
@@ -176,7 +177,7 @@ public class UserDao extends AbstractDao<User> {
 
     private static final String USER_UPDATE = "UPDATE users SET " //
             + "  username=?, password=?, email=?, phone=?, disabled=?, homeUrl=?, receiveAlarmEmails=?, " //
-            + "  receiveOwnAuditEvents=?, timezone=?, muted=?, permissions=?, name=?, locale=?, passwordVersion=?" //
+            + "  receiveOwnAuditEvents=?, timezone=?, muted=?, permissions=?, name=?, locale=?, passwordVersion=?, passwordChangeTimestamp=?" //
             + " WHERE id=?";
 
     void updateUser(User user) {
@@ -205,8 +206,10 @@ public class UserDao extends AbstractDao<User> {
 
                     boolean passwordChanged = !old.getPassword().equals(user.getPassword());
                     if (passwordChanged) {
+                        user.setPasswordChangeTimestamp(Common.timer.currentTimeMillis());
                         user.setPasswordVersion(old.getPasswordVersion() + 1);
                     } else {
+                        user.setPasswordChangeTimestamp(old.getPasswordChangeTimestamp());
                         user.setPasswordVersion(old.getPasswordVersion());
                     }
 
@@ -216,10 +219,10 @@ public class UserDao extends AbstractDao<User> {
                                     boolToChar(user.isDisabled()), user.getHomeUrl(),
                                     user.getReceiveAlarmEmails(), boolToChar(user.isReceiveOwnAuditEvents()),
                                     user.getTimezone(), boolToChar(user.isMuted()), user.getPermissions(), user.getName(), user.getLocale(),
-                                    user.getPasswordVersion(), user.getId() },
+                                    user.getPasswordVersion(), user.getPasswordChangeTimestamp(), user.getId() },
                             new int[] { Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR,
                                     Types.VARCHAR, Types.VARCHAR, Types.INTEGER, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR,
-                                    Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.INTEGER, Types.INTEGER }
+                                    Types.VARCHAR, Types.VARCHAR, Types.VARCHAR, Types.INTEGER, Types.BIGINT, Types.INTEGER }
                             );
 
                     return old;
@@ -396,6 +399,7 @@ public class UserDao extends AbstractDao<User> {
                 vo.getLocale(),
                 vo.getTokenVersion(),
                 vo.getPasswordVersion(),
+                vo.getPasswordChangeTimestamp()
         };
     }
 
@@ -431,6 +435,7 @@ public class UserDao extends AbstractDao<User> {
         map.put("locale", Types.VARCHAR);
         map.put("tokenVersion", Types.INTEGER);
         map.put("passwordVersion", Types.INTEGER);
+        map.put("passwordChangeTimestamp", Types.BIGINT);
 
         return map;
     }
